Solved Circular Dependencies in Spring Boot